# agent-eval

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
adapters/: __init__.py  openclaw.py
agenteval/: cli.py  openclaw.py
app/: streamlit_app.py
core/: __init__.py  evaluator.py  loader.py  parser.py  schema.py
data/fixtures/: README.md  schema_v0.json
data/fixtures/case_studies/: airpods-pro-2-usbc-2026-02-22-third-party.json  airpods-pro-2-usbc-2026-02-22.json  apple-20w-usb-c-adapter-2026-02-22.json
docs/: deploy-render.md  internal-checklist.md  production-gate-v1.md
server/: __init__.py  app.py  db.py  evaluate.py  ground_truth.py  models.py
server/ground_truth/: __init__.py  apple.py  bestbuy.py  dataforseo_amazon.py  safe_http.py  spend.py  types.py  utils.py
tests/: test_api_sessions.py  test_evaluator.py  test_ground_truth_spend.py  test_parser.py
