[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteval"
version = "0.1.0"
description = "AgentEval connector CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.26.0",
]

[project.scripts]
agenteval = "agenteval.cli:main"

[tool.setuptools]
packages = ["agenteval", "core", "server", "server.ground_truth"]
